# writing-agentic-rag

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: researcher.py  writer.py
app/api/: endpoints.py
app/api/v1/: endpoints.py
app/core/: config.py  dependencies.py  llm.py
app/models/: schemas.py
