[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG system with research and writing agents"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic-ai>=1.10.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[project.scripts]
agentic-rag = "agentic_rag.main:main"
agentic-rag-client = "agentic_rag.clients.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"